--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:mem:transformersdb
+spring.datasource.url=jdbc:h2:mem:transdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 springspring.datasource.password=
 
-logging.level.com.aeq.transformers.impl.app=INFO
+logging.level.com.retailer.rewards.impl=DEBUG
+
+spring.mvc.format.date=yyyy-MM-dd
