Adding README.md with details.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:h2:mem:transdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 springspring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
 
 logging.level.com.retailer.rewards.impl=DEBUG
 
